feat(Notes): implement notes provider and add new notes
Add notes provider implementation and related tests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
       },
       "group": {
         "kind": "build",
-        "isDefault": true
+        "isDefault": false
       }
     },
     {
@@ -21,13 +21,13 @@
       "type": "shell",
       "command": "source ~/.nvm/nvm.sh && nvm use && npm run watch",
       "problemMatcher": "$tsc-watch",
-      "isBackground": true,
+      "isBackground": false,
       "presentation": {
         "reveal": "never"
       },
       "group": {
         "kind": "build",
-        "isDefault": true
+        "isDefault": false
       }
     }
   ]
