--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,8 @@
       "type": "extensionHost",
       "request": "launch",
       "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
-      "outFiles": ["${workspaceFolder}/out/**/*.js"],
+      "outFiles": ["${workspaceFolder}/out/**/*.js"]
       // "preLaunchTask": "${defaultBuildTask}"
-      "preLaunchTask": "nvm-build-watch"
     }
   ]
 }
