refactor(Notes): refactor the note module
- Rename files for better clarity
- Remove notesCommandsHandler and merge it into NotesTreeProvider

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -4,8 +4,22 @@ src/**
 .gitignore
 .yarnrc
 vsc-extension-quickstart.md
-**/tsconfig.json
-**/eslint.config.mjs
+.nvmrc
+.prettierrc
+commitlint.config.mjs
+eslint.config.mjs
+jest.config.ts
+lint-staged.config.mjs
+tsconfig.json
+coverage/
+.husky/
+.github/
+*.test.ts
+__mocks__/
+CHANGELOG.md
+CONTRIBUTING.md
+README.md
+LICENSE.md
 **/*.map
 **/*.ts
 **/.vscode-test.*
