--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "DevBoard",
   "description": "A developer-focused VS Code extension that brings together tasks, notes, and a TODO code tree all in one clean workspace panel",
   "version": "0.0.1",
-  "publisher": "Khalid Elshafie",
+  "publisher": "abolkog",
   "engines": {
     "vscode": "^1.107.0",
     "node": ">=20",
@@ -144,16 +144,21 @@
   "devDependencies": {
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^7.1.0",
+    "@semantic-release/git": "^10.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "22.x",
     "@types/vscode": "^1.107.0",
     "@vscode/test-cli": "^0.0.12",
     "@vscode/test-electron": "^2.5.2",
+    "@vscode/vsce": "^3.7.1",
     "eslint": "^9.39.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
+    "semantic-release": "^25.0.2",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
