--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     outputs:
-      new_release_published: ${{ steps.semantic.outputs.new_release_published }}
       new_release_version: ${{ steps.semantic.outputs.new_release_version }}
 
     steps:
@@ -67,19 +66,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
-        
+
       - name: Debug Release Outputs
         run: |
-          echo "new_release_published: ${{ needs.release.outputs.new_release_published }}"
-          echo "new_release_version: ${{ needs.release.outputs.new_release_version }}"
-
-   
+          echo "new_release_version: ${{ steps.semantic.outputs.new_release_version }}"
 
   publish:
     name: Publish Extension
     runs-on: ubuntu-latest
     needs: release
-    if: ${{ needs.release.outputs.new_release_published }}
+    if: ${{ needs.release.outputs.new_release_version }}
 
     steps:
       - name: Checkout code
