--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,6 +3,7 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
+    "@semantic-release/github",
     [
       "@semantic-release/changelog",
       {
@@ -22,6 +23,11 @@
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
-    "@semantic-release/github"
+    [
+      "@semantic-release/exec",
+      {
+        "successCmd": "echo \"new_release_version=${nextRelease.version}\" >> $GITHUB_OUTPUT"
+      }
+    ]
   ]
 }
